# Code

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Code2020.cc  README.md
#100DaysOfCode/: README.md
20210816-0947/: .travis.yml  README.md
20210816-0947/Archived_Code_20200906_1604/Backup/Code_26012020_Backup_Do_Not_Delete/GoF-DesignPatterns/Creational-Patterns/Builder/: CMakeLists.txt  House.h  HouseBuildDirector.h  HouseBuilder.h  WoodenHouseBuilder.cpp
Archived_Code_20200906_1604/Backup/Code_17122019_Backup_Do_Not_Delete/CMakeProjects/cmake_boost/: CMakeLists.txt
Archived_Code_20200906_1604/Backup/Code_17122019_Backup_Do_Not_Delete/DesignPattern/PDP/Behavioral/ChainOfResponsibility/: CMakeLists.txt
Archived_Code_20200906_1604/Backup/Code_17122019_Backup_Do_Not_Delete/DesignPattern/PDP/Behavioral/ChainOfResponsibility/include/: EmailLogger.h
Backup/Code_17122019_Backup_Do_Not_Delete/DesignPattern/PDP/Behavioral/Strategy/: CMakeLists.txt
Backup/Code_17122019_Backup_Do_Not_Delete/DesignPattern/PDP/Behavioral/Strategy/include/Strategy/: SortInterface.h  Sorter.h
Backup/Code_17122019_Backup_Do_Not_Delete/DesignPattern/PDP/Behavioral/Strategy/src/: QuickSort.cpp
Backup/Code_17122019_Backup_Do_Not_Delete/Set-Cpp-CMake-Projects/CMakeHelloWorld/: CMakeLists.txt
BitManipulation/: BitManipulation.cpp
CMakeProjects/db_proj/Sqlite3/: CMakeLists.txt
CMakeProjects/db_proj/sqlite_db_client/: CMakeLists.txt
CMakeProjects/db_proj/sqlite_db_client/src/: Main.cpp
CPlusPlus/: DefaultValue.cpp
Code_17122019_Backup_Do_Not_Delete/: Code.cpp
Cpp/: Employee.cpp  MyClass.cpp
Cpp11/: Functor.cpp
CppRevision/: AllocationFailure.cpp  ArrayException.cpp  AutoPointerImplementation.cpp  BoostDataTime.cpp  BoostDataTimeWithCurrentDate.cpp  BoostTest.cpp  CallbacksUsingFunctionPtr.cpp  CommandPattern.cpp  Cpp11noexcept.cpp  Default-Template-Params.cpp  ExceptionClassHierarchy.cpp  Expn_HandlingException.cpp  Expn_VecScopeGaurd.cpp  Expn_vector.cpp  Function-Object.cpp  GenericAlgorithm.cpp  Implement-Generic-Algo.cpp  MemberFunctionPointer.cpp  Multidimension-Container.cpp  Overload-Subscript.cpp  README.md  Reference.cpp  SimpleException.cpp  Specializing-Template.cpp  Standard-Container-Classes.cpp  StandardException.cpp  TP_VirtualFunc.cpp  Template-Adapter.cpp  Template-Class.cpp  TemplateFunctions.cpp  Trait-Classes.cpp  UE_from_destructor.cpp  UncaughtExceptionEllipsis.cpp  UncaughtExceptionNested.cpp  VPtrTest.cpp  VirtualFunctions-12-2.cpp  non-type-template-params.cpp  random_num_gen.cpp  shared_ptr.cpp  stl-vector-fill-random-num.cpp  (+5 more)
DS-Algo/: PriorityQueue.cpp  SegmentTree.cpp
DesignPattern/Head_First/Command/: CMakeLists.txt
DesignPattern/Head_First/Command/include/Command/: CeilingFan.h  CeilingFanOffCommand.h  CeilingFanOnCommand.h  Command.h  GarageDoor.h  GarageDoorDownCommand.h  GarageDoorUpCommand.h  Hottub.h  HottubOffCommand.h  HottubOnCommand.h  Light.h  LightOffCommand.h  LightOnCommand.h  LivingroomLightOffCommand.h  LivingroomLightOnCommand.h  NoCommand.h  RemoteControl.h  SimpleRemoteControl.h  Stereo.h  StereoOffCommand.h  StereoOnWithCDCommand.h  TV.h  TVOffCommand.h  TVOnCommand.h
DesignPattern/Head_First/Command/src/: CeilingFan.cpp  CeilingFanOffCommand.cpp  CeilingFanOnCommand.cpp  GarageDoor.cpp  GarageDoorDownCommand.cpp  GarageDoorUpCommand.cpp  Hottub.cpp  HottubOffCommand.cpp  HottubOnCommand.cpp  Light.cpp  LightOffCommand.cpp  LightOnCommand.cpp  LivingroomLightOffCommand.cpp  LivingroomLightOnCommand.cpp  NoCommand.cpp  RemoteControl.cpp  RemoteControlTest.cpp  RemoteLoader.cpp  SimpleRemoteControl.cpp  Stereo.cpp  StereoOffCommand.cpp  StereoOnWithCDCommand.cpp
DesignPattern/Head_First/Decorator/: CMakeLists.txt
DesignPattern/Head_First/Decorator/include/Decorator/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Milk.h  Mocha.h  Soy.h  Whip.h
DesignPattern/Head_First/Decorator/src/: Beverage.cpp  DarkRoast.cpp  Decaf.cpp  Espresso.cpp  HouseBlend.cpp  Milk.cpp  Mocha.cpp  Soy.cpp  StarbuzzCoffee.cpp  Whip.cpp
DesignPattern/Head_First/Observer/: CMakeLists.txt
DesignPattern/Head_First/Observer/include/Observer/: CurrentConditionsDisplay.h  DisplayElement.h  ForecastDisplay.h  HeatIndexDisplay.h  Observer.h  StatisticsDisplay.h  Subject.h  WeatherData.h
DesignPattern/Head_First/Observer/src/: CurrentConditionsDisplay.cpp  ForecastDisplay.cpp  HeatIndexDisplay.cpp  StatisticsDisplay.cpp  WeatherData.cpp  WeatherStation.cpp
DesignPattern/Head_First/Strategy/: CMakeLists.txt  README.txt
DesignPattern/Head_First/Strategy/include/: DecoyDuck.h  Duck.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  Quack.h  RedheadDuck.h  RubberDuck.h  Squeak.h
DesignPattern/Head_First/Strategy/include/Strategy/: DecoyDuck.h  Duck.h  FlyBehaviour.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  Quack.h  QuackBehaviour.h  RedheadDuck.h  RubberDuck.h  Squeak.h
DesignPattern/Head_First/Strategy/src/: DecoyDuck.cpp  Duck.cpp  FlyNoWay.cpp  FlyRocketPowered.cpp  FlyWithWings.cpp  MallardDuck.cpp  MiniDuckSimulator.cpp  ModelDuck.cpp  MuteQuack.cpp  Quack.cpp  RedheadDuck.cpp  RubberDuck.cpp  Squeak.cpp
DesignPattern/Head_First/Strategy/src/include/: DecoyDuck.h  Duck.h  FlyBehaviour.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  Quack.h  QuackBehaviour.h  RedheadDuck.h  RubberDuck.h  Squeak.h
DesignPattern/PDP/Behavioral/ChainOfResponsibility/: CMakeLists.txt
DesignPattern/PDP/Behavioral/ChainOfResponsibility/ChainOfResponsibility/: EmailLogger.cpp  EmailLogger.h  Logger.cpp
DesignPattern/PDP/Behavioral/ChainOfResponsibility/include/: EmailLogger.h  Logger.h  StderrLogger.h  StdoutLogger.h
DesignPattern/PDP/Behavioral/ChainOfResponsibility/include/ChainOfResponsibility/: Logger.h  StderrLogger.h  StdoutLogger.h
DesignPattern/PDP/Behavioral/ChainOfResponsibility/src/: ChainOfResponsibilityExample.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp
(+1498 files in other folders)
